# asim

./: .eslintcache  .gitignore  README.md  gen.py  package-lock.json  package.json
.husky/: pre-commit
api/: .gitignore  Dockerfile  README.md  client.py  cloudbuild.yaml  pyproject.toml  userConversations.csv
api/api/: __main__.py  flows.py  llm.py  main.py  scenario.py
api/api/auth/: deps.py
api/api/data/: level_scenarios.py
api/api/db/: auth_tokens.py  chats.py  client.py  cohort.py  conversations.py  magic_links.py  users.py
api/api/extract/: __init__.py  demographics.py  interests.py
api/api/levels/: all.py  level_1.py  level_2.py  level_3.py  seed.py  states.py
api/api/persona/: __init__.py  subject.py  user.py
api/api/routers/: auth.py  conversations.py
api/api/schemas/: chat.py  conversation.py  objectid.py  persona.py  user.py  utc_datetime.py
api/api/services/: auth.py  chat_generation.py  chat_handler.py  chat_service.py  cohort.py  connection_manager.py  conversation_generation.py  conversation_handler.py  conversation_pregen.py  conversation_service.py  feedback_generation.py  generate_feedback.py  generate_suggestions.py  llm.py  llm_service.py  memory_store.py  message_generation.py  qa_messages.py  topic_generation.py  user_info.py  user_service.py  websocket_handler.py
api/api/services/flow_state/: ambiguous_language.py  base.py  blunt_language.py  figurative_language.py  playground.py
frontend/: .gitignore  README.md  index.css  index.html  package-lock.json  package.json  tsconfig.app.json
scripts/: client.py
src/: App.css  (+1 more)
(+59 files in other folders)
