[tool.setuptools]
py-modules = []


[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]


[project]
name = 'sim'
version = '0.0.1'

dependencies = [
    'transformers==4.41.2',
    'torch==2.3.1',
    'datasets==2.19.2',
    'einops==0.8.0',
    'numpy==1.26.4',
    'scikit-learn==1.5',
    'websockets==12.0',
    'hdbscan==0.8.36',
    "pandas==2.2.2",
    'faker==25.8.0',
]
