[tool.setuptools]
py-modules = []


[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]


[project]
name = 'api'
version = '0.0.1'


dependencies = [
    'fastapi==0.111.0',
    'uvicorn==0.30.1',
    'pydantic==2.7.4',
    'numpy==1.26.4',
    'websockets==12.0',
    'faker==25.8.0',
    'aiofiles==23.2.1',
    'motor==3.5.0'
]
